test/fail/endquote1.min
program
start
  '\"'!  $$ Should Fail because '"' is valid
end
